Add SBOM/vulnerability scanning and C++ dependency tracking
- Add Section 9 to SDP: Security & Compliance documentation
- Enable CMAKE_EXPORT_COMPILE_COMMANDS in CI builds
- Generate separate SBOM for C++ build artifacts
- Scan all three SBOMs (image, source, cpp-build) with Grype

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         shell: bash
         run: |
           source /opt/ros/humble/setup.bash
-          colcon build --symlink-install
+          colcon build --symlink-install --cmake-args -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
         working-directory: .
 
       - name: Lint and Test
